Back/work/log/fromFrontX
subId=1
src: In function ‘int main()’:
src:5:3: error: expected ‘;’ before ‘printf’
   printf("%d\n",a+b);
   ^~~~~~
subId=1
workRc: line 78: fpc: command not found
subId=2
uTime=3
workRc: line 93: 28029 Killed                  ./actX < "io/in"${n} > out
